syntax = "proto3";

option java_package = "com.example";

package com.example;

service SearchService {
    rpc getAutocompleteResponse(AutocompleteRequest) returns (AutocompleteResponse);
}

message AutocompleteRequest {
}

message AutocompleteResponse {
    repeated AutocompleteResponseDto response = 1;
}

message AutocompleteResponseDto {
    string name = 1;
}