syntax = "proto3";

import "google/protobuf/any.proto";

option java_package = "com.example";

package com.example;

service CurrencyService {
    rpc getRate(GetRateRequest) returns (GetRateResponse);
}

message GetRateRequest {
    string sourceCurrency = 1;
    string targetCurrency = 2;
}

message GetRateResponse {
    string rate = 1;
}

message Row {
    repeated google.protobuf.Any values = 1;
}